z-index fix

--- a/css/Header.css
+++ b/css/Header.css
@@ -9,12 +9,10 @@ body {
 
 .logo{
     height: 100%;
-    z-index: -10;
 }
 
 .container{
     padding: 0;
-    z-index: 10;
     position: relative;
 }
 
